--- a/index.html
+++ b/index.html
@@ -14,55 +14,63 @@
 
 <body>
     <div class="wrapper">
-        <main>
-
-            <div class="main-body">
-                <div class="upper-body">
-
-                    <div class="search-box">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" class="search-input">
-                    </div>
 
 
-                    <div class="title-filter">
-                        <h4>Latest Tasks</h4>
-                        <div class="dropdown">
-                            <button class="dropdown-btn">filter</button>
-                            <div class="dropdown-menu">
-                                <button onclick="loadList(getTasks())">all</button>
-                                <button onclick="loadList(tasksFilter(false))">active</button>
-                                <button onclick="loadList(tasksFilter(true))">completed</button>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div>
-                        <ul class="task-list"></ul>
-                    </div>
+        <div class="main-body">
+            <nav>
+                <h1>To-Do App</h1>
+                <button class="toggle-btn">🌙</button>
+            </nav>
 
-                    <div class="noTasks">
-                        <span>No Tasks yet! Add one 👆</span>
-                    </div>
 
-                    <div class="submit-box">
-                        <div class="submit-body">
-                            <input type="text" placeholder="Add text" class="submit-input">
-                            <div>
-                                <button class="submit-btn gradient-btn rect theme-red shadow-effect">Add</button>
-                                <button class="cancel-btn gradient-btn rect theme-blue shadow-effect">Cancel</button>
-                            </div>
+
+            <main>
+
+                <div class="search-box">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" class="search-input">
+                </div>
+
+
+                <div class="title-filter">
+                    <h4>Latest Tasks</h4>
+                    <div class="dropdown">
+                        <button class="dropdown-btn filer-btn">filter</button>
+                        <div class="dropdown-menu">
+                            <button onclick="loadList(getTasks())">all</button>
+                            <button onclick="tasksFilter(false)">active</button>
+                            <button onclick="tasksFilter(true)">completed</button>
                         </div>
                     </div>
                 </div>
 
-                <div class="bottom-menu">
-                    <button class="add-btn gradient-btn theme-pink glow-effect shadow-effect">+</button>
+                <div>
+                    <ul class="task-list"></ul>
                 </div>
+
+                <div class="noTasks">
+                    <span>No Tasks yet! Add one 👆</span>
+                </div>
+
+                <div class="submit-box">
+                    <div class="submit-body">
+                        <input type="text" placeholder="Add text" class="submit-input">
+                        <div>
+                            <button class="submit-btn gradient-btn rect theme-red shadow-effect">Add</button>
+                            <button class="cancel-btn gradient-btn rect theme-blue shadow-effect">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </main>
+
+            <div class="bottom-wrapper">
+                <div class="bottom-menu"></div>
+                <button class="add-btn gradient-btn theme-pink glow-effect shadow-effect">+</button>
             </div>
+        </div>
 
 
-        </main>
     </div>
 </body>
 
